# pywrkr

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  codecov.yml  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/workflows/: codeql-adv.yml  codeql.yml  docker-publish.yml  publish.yml  python-package.yml  release.yml  sanitize-pr-description.yml
docs/: record-demo.sh
docs/superpowers/plans/: 2026-03-13-reporting-improvements.md  2026-03-18-multi-region-pywrkr.md
docs/superpowers/specs/: 2026-03-18-multi-region-pywrkr-design.md
examples/: README.md  basic-benchmark-output.txt  basic-benchmark.json  har-import-scenario-with-assertions.json  har-import-scenario.json  har-import-urls.txt  latency-breakdown-output.txt  latency-breakdown.json  percentiles.csv  rate-limited-output.txt  rate-limited.json  report.html  sample-recording.har  threshold-check-output.txt  threshold-check.json  traffic-profile-sine-output.txt  traffic-profile-sine.json  user-simulation-output.txt  user-simulation.json
infra/: README.md
infra/jenkins/: Jenkinsfile  generate_report.py
infra/multi-region/: Dockerfile  README.md
infra/multi-region/jenkins/: Jenkinsfile
infra/multi-region/scenarios/: api-flow.json  har-example.json  simple-get.json
infra/multi-region/terraform/: backend.tf  locals.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
infra/multi-region/terraform/modules/ecs-cluster/: main.tf  outputs.tf  variables.tf
infra/multi-region/terraform/modules/iam/: main.tf  outputs.tf  variables.tf
infra/multi-region/terraform/modules/logging/: main.tf  outputs.tf  variables.tf
infra/multi-region/terraform/modules/network/: main.tf  outputs.tf  variables.tf
infra/multi-region/terraform/modules/observability/: main.tf  outputs.tf  variables.tf
infra/multi-region/terraform/modules/pywrkr-master/: main.tf  outputs.tf  variables.tf
infra/multi-region/terraform/modules/pywrkr-worker/: main.tf  outputs.tf  variables.tf
infra/multi-region/terraform/modules/regional/: main.tf  outputs.tf  variables.tf
infra/multi-region/terraform/modules/shared/: main.tf  outputs.tf  variables.tf
infra/terraform/: README.md  outputs.tf
infra/terraform/modules/ecs-service-pywrkr/: main.tf  outputs.tf
infra/terraform/modules/iam/: main.tf
src/pywrk/: __init__.py  main.py
src/pywrkr/: __init__.py  __main__.py  config.py  distributed.py  har_import.py  main.py  multi_url.py  reporting.py  traffic_profiles.py  workers.py
src/pywrkr/templates/: __init__.py  gatling_report.html
tests/: test_audit_config.py  test_audit_distributed.py  test_audit_har_import.py  test_audit_main.py  test_audit_multi_url.py  test_audit_reporting.py  test_audit_traffic_profiles.py  test_audit_workers.py  test_coverage_gaps.py  test_distributed.py  test_har_import.py  test_main_validation.py  test_multi_url.py  test_parameter_validation.py  test_pywrk.py  test_pywrkr.py  test_rate_limiter.py  test_refactored.py  test_reporting.py  test_reservoir.py  test_workers_unit.py
{.github/workflows/: python-package.yml}
