[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywrkr"
version = "1.0.4"
description = "Python HTTP benchmarking tool with extended statistics, inspired by wrk and Apache ab"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "pywrkr contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Benchmark",
]
dependencies = [
    "aiohttp>=3.8",
]

[project.optional-dependencies]
tui = ["rich>=13.0"]
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20", "opentelemetry-exporter-otlp-proto-http>=1.20"]
all = ["rich>=13.0", "opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20", "opentelemetry-exporter-otlp-proto-http>=1.20"]
dev = ["pytest>=7.0", "pytest-xdist>=3.0", "aiohttp>=3.8"]

[project.scripts]
pywrkr = "pywrkr.main:main"

[project.urls]
Homepage = "https://github.com/kurok/pywrkr"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n 7"
