[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywrkr"
version = "1.3.3"
description = "Python HTTP benchmarking tool with extended statistics, inspired by wrk and Apache ab"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "pywrkr contributors" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Benchmark",
]
dependencies = [
    "aiohttp>=3.8",
]

[project.optional-dependencies]
tui = ["rich>=13.0"]
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20", "opentelemetry-exporter-otlp-proto-http>=1.20"]
all = ["rich>=13.0", "opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20", "opentelemetry-exporter-otlp-proto-http>=1.20"]
dev = ["pytest>=7.0", "pytest-xdist>=3.0", "pytest-cov>=4.0", "aiohttp>=3.8"]
lint = ["mypy>=1.0", "ruff>=0.1.0"]
security = ["bandit>=1.7", "pip-audit>=2.6"]

[project.scripts]
pywrkr = "pywrkr.main:main"

[project.urls]
Homepage = "https://github.com/kurok/pywrkr"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pywrkr.templates" = ["*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n 7"
filterwarnings = [
    "ignore:enable_cleanup_closed:DeprecationWarning:aiohttp",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
# Per-module overrides for files that need gradual typing
[[tool.mypy.overrides]]
module = ["pywrkr.distributed", "pywrkr.workers", "pywrkr.reporting"]
disable_error_code = ["return-value", "operator", "arg-type", "type-var", "assignment", "name-defined", "var-annotated"]

[tool.bandit]
# B104: hardcoded 0.0.0.0 bind is intentional for distributed mode --bind default
# B310: urlopen used for Prometheus pushgateway export with validated URL
# B311: random.randint used for reservoir sampling and cache-busting, not security
skips = ["B104", "B310", "B311"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
